# langton-ant-mpi

./: .gitignore  CMakeLists.txt  README.md
results_final/: README.md  gather_frequency_1000_10000.csv  migration_overhead_1000_100000.csv  strong_scaling_1000_100000.csv  strong_scaling_5000_100000.csv  strong_scaling_500_100000.csv  strong_scaling_compute_heavy_5000_50000_ants5000.csv  weak_scaling_100000.csv  weak_scaling_density_100000.csv
scripts/: package_submission.sh  plot_results.py  run_benchmarks.sh  run_compute_heavy.sh  run_experiments.sh  run_weak_density.sh
src/: main.cpp  mpi_simulation.cpp  mpi_simulation.h  ppm.cpp  ppm.h  simulation.cpp  simulation.h
